--- a/README
+++ b/README
@@ -131,3 +131,5 @@ AT (0, 0, 0) RELATIVE PREVIOUS
 For more documentation about the NCrystal_sample component, run:
 
 $> mcdoc NCrystal_sample
+
+I try if I can modify this file.
